--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zhu/aliyun-oss",
+    "name": "zhu/aliyun-oss-sdk",
     "type": "library",
     "description": "阿里云 OSS 官方 SDK 的 Composer 封装，支持任何 PHP 项目，包括 Laravel、Symfony、TinyLara 等等。(基于官方 PHP SDK 开发包(2015-08-19)https://docs.aliyun.com/?spm=5176.383338.201.106.Rr4YA4#/pub/oss/sdk/sdk-download&php)",
     "keywords": ["AliyunOSS", "aliyun", "OSS", "laravel"],
