--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "zhu/aliyun-oss-sdk",
     "type": "library",
-    "description": "阿里云 OSS 官方 SDK 的 Composer 封装，支持任何 PHP 项目，包括 Laravel、Symfony、TinyLara 等等。(基于官方 PHP SDK 开发包(2015-08-19)https://docs.aliyun.com/?spm=5176.383338.201.106.Rr4YA4#/pub/oss/sdk/sdk-download&php)",
+    "description": "阿里云 OSS 官方 SDK 的 Composer 封装，支持任何 PHP 项目，包括 Laravel、Symfony、TinyLara 等",
     "keywords": ["AliyunOSS", "aliyun", "OSS", "laravel"],
     "homepage": "https://github.com/zhukangfeng/aliyun-oss",
     "license": "MIT",
